# timely

./: Cargo.toml  README.md
.cargo/: config.toml
crates/server/: Cargo.toml  wapm.toml
crates/server/src/: lib.rs  main.rs  util.rs
crates/server/src/db/: client_supabase.rs  mod.rs  types.rs
crates/server/src/logic/: user.rs
crates/server/src/server/: mod.rs
crates/server/src/server/routes/: dashboard.rs  login.rs  mod.rs  signup.rs  timelog_finish.rs  timelog_start.rs
crates/server/src/server/ui/: mod.rs  util.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
db/migrations/: 0001-create_users_table.sql  0002-create_user_tags_table.sql  0003-create_timelogs_table.sql  0004-create_timelogs_user_tags_table.sql  0005-timelogs_add_title.sql
