[package]
name = "timely_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "timely-server"
path = "./src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
time = { workspace = true, features = ["serde", "formatting", "parsing"] }

cookie = { version = "0.16.2", features = ["percent-encode"] }
anyhttp = { git = "https://github.com/theduke/anyhttp", version = "0.1.0" }
cynic = "2.2.1"
http = "0.2.8"
maud = "0.24.0"
wasix_http_client = { git = "https://github.com/wasmerio/wasmer", branch = "wasix", version = "0.1.0" }
wcgi = { git = "https://github.com/wasmerio/wcgi", version = "0.1.0" }
serde_urlencoded = "0.7.1"
blake3 = "1.3.3"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"
form_urlencoded = "1.1.0"
